Fix margin spacing

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ a {
 div {
   padding: .5rem;
   text-align: center;
-  margin: 1rem;
+  margin: .5rem;
 }
 
 .btn {
